# nbconvert-inline-artifacts

./: README.md  environment.yml  setup.cfg
examples/file_artifacts/: example.ipynb  report.html  report.ipynb
examples/named_artifacts_scripted/: example.ipynb  report.html  report.ipynb
nbconvert_html_complex/: __init__.py
nbconvert_inline_artifacts/: __init__.py
script/: checks.py
test/: __init__.py  test_remove_artifacts.py  test_substitute_artifacts.py
