[metadata]
name = nbconvert_html_complexes
version = 0.1
description = Augmentations to nbconvert to facilitate the conversion of notebooks into HTML complexes
url = https://github.com/hamelin/nbconvert-html-complexes
author = Benoit Hamelin
author_email = benoit@benoithamelin.com

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters

[options]
packages = find:
python_requires = >=3.7
install_requires =
    nbconvert

[options.packages.find]
exclude = test
