[metadata]
name = nbconvert_inline_artifacts
version = 1.0
description = Augmentations to nbconvert to facilitate the incorporation of inline artifacts into web-able documents.
url = https://github.com/hamelin/nbconvert-inline-artifacts
author = Benoit Hamelin
author_email = benoit@benoithamelin.com

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Interpreters

[options]
packages = find:
python_requires = >=3.7
install_requires =
    nbconvert

[options.packages.find]
exclude = test
